Another few changes: removed useless imports and simplified the getFilteredTasks function #54.